# fastapi-template

./: .env.example  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
core/configuration/: server.py
core/configuration/routers/: __init__.py  router.py
core/infrastructure/database/: __init__.py  database_manager.py
core/infrastructure/repositories/: __init__.py  abstract_repository.py
core/internal/events/: lifespan.py
core/internal/routers/: default_router.py  health_router.py
logger/: colors.py  formatter.py  logger_builder.py
scripts/: healthcheck.sh
tests/: conftest.py  test_main.py
